@@ -6,38 +6,30 @@ docdir = $(tmp)/usr/share/doc/debian
 
 build: stamp-build
 stamp-build:
-	test -d FAQ -a -f debian/rules
-	cd FAQ && $(MAKE) html text ps pdf
-	cd FAQ && gzip -9 debian-faq.en.txt debian-faq.en.ps debian-faq.en.pdf
+	test -f Makefile -a -f debian/rules
+	$(MAKE) html text ps pdf
+	gzip -9 debian-faq.en.txt debian-faq.en.ps debian-faq.en.pdf
 	touch $@
 
 clean:
-	test -d FAQ -a -f debian/rules
+	test -f Makefile -a -f debian/rules
 	test "`id -u`" -eq 0
-	cd FAQ && $(MAKE) clean
+	$(MAKE) clean
 	rm -rf $(tmp)
-	rm -f FAQ/*.gz stamp-build debian/files `find . -name "*~"`
-
-refresh:
-	cd doc && $(MAKE)
+	rm -f *.gz stamp-build debian/files `find . -name "*~"`
 
 binary: binary-indep binary-arch
 
 binary-arch:
 
 binary-indep: build
-	test -d FAQ -a -f debian/rules
+	test -f Makefile -a -f debian/rules
 	test "`id -u`" -eq 0
 	rm -rf $(tmp)
 
 	install -m 755 -d $(tmp)/DEBIAN $(docdir)/FAQ \
           $(tmp)/usr/share/doc-base $(tmp)/usr/share/doc/doc-debian
-# Copy all the contents of doc/
-	cp -p doc/* $(docdir)
-# Save for the files that are used to auto-generate them
-	rm -f $(docdir)/*wml
-	rm -f $(docdir)/Makefile
-	cd FAQ && install -m 644 debian-faq.en.txt.gz debian-faq.en.ps.gz \
+	install -m 644 debian-faq.en.txt.gz debian-faq.en.ps.gz \
                     debian-faq.en.pdf.gz debian-faq.en.html/* $(docdir)/FAQ
 	cd $(docdir)/FAQ && for file in *.en.html; do \
           ln -s $$file $${file%$${file#$${file%.en.html}}}.html; \
@@ -62,8 +54,6 @@ binary-indep: build
            $(docdir)/FAQ/debian-faq.*pdf.gz \
              ../
 	cd $(docdir)/FAQ/ && GZIP=-9 tar czf $(CURDIR)/../debian-faq.en.html.tar.gz *
-	mv  $(docdir)/constitution.1.2.txt ../constitution.txt
-	mv  $(docdir)/social-contract.1.1.txt ../social-contract.txt 
 
 	dpkg-distaddfile debian-faq.en.html.tar.gz byhand -
 	dpkg-distaddfile debian-faq.en.txt.gz byhand -
