@@ -6,6 +6,7 @@ debian-faq (3.1.5) UNRELEASED; urgency=high
     manifesto, mailing-lists or social-contract.
   * debian/control: package is now called debian-faq, not doc-debian.  Rewrote
     package description.
+  * debian/rules: faq no longer is in FAQ/, but in .: adjust build rules.
 
  -- Joost van Baal <joostvb@debian.org>  Sat, 29 Mar 2008 14:21:53 +0100
 
